--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Molengo" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lekton" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
